fixing text wrap

--- a/src/components/Content/Profile/Profile.module.css
+++ b/src/components/Content/Profile/Profile.module.css
@@ -144,7 +144,11 @@
   }
   .font {
     margin-top: 20px;
+    width: 80%;
     color: #4b4453;
+    text-align: center;
+    margin: 0 auto;
+    text-align-last: auto;
   }
   .name {
     margin-left: 0;
