--- a/src/components/Content/SingleProject/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/Content/SingleProject/ProjectInfo/ProjectInfo.module.css
@@ -155,8 +155,8 @@
   }
 
   .text {
-    width: 100%;
-    margin-right: 30px !important;
+    width: 90%;
+    margin-left: 5px;
     text-align: center;
     font-family: "Playfair Display", serif;
     font-size: large;
